testsuite/tests/properties/invalid_node_builder/list_no_children/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic class EmptyNode: FooNode {
}

@synthetic
class SyntheticLiteralList: ASTList[Literal] {
}

class Example: BaseExample {
    @exported
    @lazy
    prop: SyntheticLiteralList = SyntheticLiteralList.builder().build()
}
